--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,8 +6,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Hola!</div>
-        
-        <h1>Web y Patrones</h1>
+        <div>
+            <h1>Titulo 1</h1>
+            <h2>Titulo 2</h2>
+        </div>
+        <h3>Titulo 3</h3>        
+        <h4>Titulo 4</h4>
+        <h5>Titulo 5</h5>
+        <h6>Titulo 6</h6>
+
+        <br/>
+        <br/>
+        <p>Lorem ipsum dolor sit <span style="font-weight: bold">amet consectetur adipiscing</span> elit sodales pharetra nullam, scelerisque eleifend magna at maecenas nostra cubilia aliquet rutrum, velit venenatis hac ultrices ac ut auctor potenti duis. Vel semper inceptos vitae massa et torquent cursus malesuada montes, vivamus a metus donec convallis varius netus ullamcorper commodo leo, lectus ultricies blandit dis eros interdum potenti ultrices. Dictum mi parturient sodales faucibus platea ac aliquet torquent est, nec massa nisi enim luctus phasellus ornare volutpat nisl, vulputate sed inceptos dapibus vitae tristique dis aenean.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sodales pharetra nullam, scelerisque eleifend magna at maecenas nostra cubilia aliquet rutrum, velit venenatis hac ultrices ac ut auctor potenti duis. Vel semper inceptos vitae massa et torquent cursus malesuada montes, vivamus a metus donec convallis varius netus ullamcorper commodo leo, lectus ultricies blandit dis eros interdum potenti ultrices. Dictum mi parturient sodales faucibus platea ac aliquet torquent est, nec massa nisi enim luctus phasellus ornare volutpat nisl, vulputate sed inceptos dapibus vitae tristique dis aenean.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sodales pharetra nullam, scelerisque eleifend magna at maecenas nostra cubilia aliquet rutrum, velit venenatis hac ultrices ac ut auctor potenti duis. Vel semper inceptos vitae massa et torquent cursus malesuada montes, vivamus a metus donec convallis varius netus ullamcorper commodo leo, lectus ultricies blandit dis eros interdum potenti ultrices. Dictum mi parturient sodales faucibus platea ac aliquet torquent est, nec massa nisi enim luctus phasellus ornare volutpat nisl, vulputate sed inceptos dapibus vitae tristique dis aenean.</p>
+
+
     </body>
 </html>
